# hyperspace-qt5

./: CMakeLists.txt  HyperspaceQt5Config.cmake.in  README.md
cmake/modules/: CMakeLists.txt  HyperspaceMacros.cmake  HyperspacePaths.cmake.in
hyperspace2cpp/: CMakeLists.txt  hyperspace2cpp.cpp  hyperspace2cpp.h  hyperspaceaggregateproducerinterface.cpp.in  hyperspaceaggregateproducerinterface.h.in  hyperspaceconsumerinterface.cpp.in  hyperspaceconsumerinterface.h.in  hyperspaceproducerinterface.cpp.in  hyperspaceproducerinterface.h.in  main.cpp
src/: CMakeLists.txt  hyperspaceconfig.h.in
src/HyperspaceClient/: CMakeLists.txt  HyperspaceQt5Client.pc.in  HyperspaceQt5ClientConfig.cmake.in  hyperspacecapabilitywatcher.cpp  hyperspacecapabilitywatcher.h  hyperspacecapabilitywatcher_p.h  hyperspaceglobaldiscoverywatcher.cpp  hyperspaceglobaldiscoverywatcher_p.h
src/HyperspaceCore/: AbstractWaveTarget.cpp  AbstractWaveTarget.h  AbstractWaveTarget_p.h  BSONDocument.cpp  BSONDocument.h  BSONSerializer.cpp  BSONSerializer.h  BSONStreamReader.cpp  BSONStreamReader.h  CMakeLists.txt  Fluctuation.cpp  Fluctuation.h  Gate.cpp  Gate.h  Global.h  HyperspaceQt5Core.pc.in  HyperspaceQt5CoreConfig.cmake.in  Rebound.cpp  Rebound.h  Socket.cpp  Socket.h  Wave.cpp  Wave.h  Waveguide.cpp  Waveguide.h
src/HyperspaceProducerConsumer/: CMakeLists.txt  ConsumerAbstractAdaptor.cpp  ConsumerAbstractAdaptor.h  HyperspaceQt5ProducerConsumer.pc.in  HyperspaceQt5ProducerConsumerConfig.cmake.in  ProducerAbstractInterface.cpp  ProducerAbstractInterface.h
tests/: CMakeLists.txt  bson-basics-generate.py  bson-basics-parse.py  bson-basics.cpp
tests/lib/: CMakeLists.txt  fakehyperdrive.cpp  fakehyperdrive.h
